fix: right icon align

--- a/packages/react/src/components/header/components/headerActionBarSubItem/HeaderActionBarSubItem.module.scss
+++ b/packages/react/src/components/header/components/headerActionBarSubItem/HeaderActionBarSubItem.module.scss
@@ -47,9 +47,14 @@ h4.actionBarSubItem {
 }
 
 .actionBarSubItemIcon {
+  flex-shrink: 0;
   height: 24px;
   line-height: 24px;
   position: relative;
+}
+
+.actionBarSubItemIconRight {
+  align-self: flex-start;
 }
 
 .grow {
